# cccl

./: .clang-format  .clang-tidy  .clangd  .coderabbit.yaml  .codespell-ignore.txt  .gdbinit  .gersemirc  .git-blame-ignore-revs  .gitignore  .gitmodules  .lldbinit  .pre-commit-config.yaml  .shellcheckrc  404.html  AGENTS.md  CITATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add_ptx_instruction.py  branch_while_cuda_graph.dot  cccl-version.json  ci-overview.md  compile_flags.txt  context7.json  cpp.html  et --hard HEAD~1  flake.nix  genindex.html  index.html  objects.inv  pagelist.txt  print_env.sh  py-modindex.html  pyproject.toml  (+8 more)
.upstream-tests/test/: CMakeLists.txt  force_include.h  lit.site.cfg.in
c/: CMakeLists.txt
c/parallel/: CMakeLists.txt
c/parallel.v2/: CMakeLists.txt
c/src/: for.cu  reduce.cu
c/test/: CMakeLists.txt  c2h.h  test_for.cpp  test_for_each.cpp  test_main.cpp  test_reduce.cpp
c2h/: CMakeLists.txt  catch2_runner.cpp  catch2_runner.cu  catch2_runner_helper.cu  catch2_runner_helper.inl  generators.cu  generators_gen_values.cu  generators_uniform_offsets.cu  generators_vector.cu
codegen/: CMakeLists.txt  codegen.cpp
cub/: .clang-tidy  CHANGELOG.md  CMakeLists.txt  LICENSE.TXT  README.md  api.html  benchmarking.html  developer_overview.html  index.html  releases.html  test_overview.html  tuning.html
cub/api/: block.html  classcub_1_1ArgIndexInputIterator.html  classcub_1_1BlockAdjacentDifference.html  classcub_1_1BlockDiscontinuity.html  classcub_1_1BlockExchange.html  classcub_1_1BlockHistogram.html  classcub_1_1BlockLoad.html  classcub_1_1BlockMergeSort.html  classcub_1_1BlockMergeSortStrategy.html  classcub_1_1BlockRadixRank.html  classcub_1_1BlockRadixRankMatch.html  classcub_1_1BlockRadixSort.html  classcub_1_1BlockReduce.html  classcub_1_1BlockRunLengthDecode.html  classcub_1_1BlockScan.html  classcub_1_1BlockShuffle.html  classcub_1_1BlockStore.html  classcub_1_1CacheModifiedInputIterator.html  classcub_1_1CacheModifiedOutputIterator.html  classcub_1_1GridQueue.html  classcub_1_1SwizzleScanOp.html  classcub_1_1TexObjInputIterator.html  classcub_1_1WarpExchange.html  classcub_1_1WarpLoad.html  classcub_1_1WarpMergeSort.html  classcub_1_1WarpReduce.html  classcub_1_1WarpScan.html  classcub_1_1WarpStore.html  device.html  grid.html  index.html  iterator.html  namespacecub_1a0152e6fc2c5fb16bcc72078fc97dc4c2.html  namespacecub_1a063f8bddc3979e1cfeace53339434122.html  namespacecub_1a0d29b747a801255a57f3f0355569934d.html  namespacecub_1a0edb062b8ef768ddee5948242652d67a.html  namespacecub_1a19c9696ebd3b66c361dd9abcafae2f3a.html  namespacecub_1a1b6e2aaf857cfd72861cf2499bf9acb3.html  namespacecub_1a1b975318a8f3f7a19769fa51121bb288.html  namespacecub_1a1d58d7c9bdbebe3c8ce82f47c881c418.html  (+138 more)
cub/api_docs/: block_wide.html  device_wide.html  thread_level.html  warp_wide.html
cub/benchmarks/: CMakeLists.txt
cub/cmake/: CubBuildCompilerTargets.cmake  CubBuildTargetList.cmake  CubCudaConfig.cmake  CubHeaderTesting.cmake  CubInstallRules.cmake  CubUtilities.cmake  header_test.in
cub/cub/: config.cuh  cub.cuh  guarantees.cuh  util_allocator.cuh  util_arch.cuh  util_compiler.cuh  util_cpp_dialect.cuh  util_debug.cuh  util_deprecated.cuh  util_device.cuh  util_macro.cuh  util_math.cuh  util_namespace.cuh  util_policy_wrapper_t.cuh  util_ptx.cuh  util_temporary_storage.cuh  util_type.cuh  util_vsmem.cuh  version.cuh
cub/developer/: block_scope.html  device_scope.html  nvtx.html  thread_level.html  visibility.html  warp_level.html
cub/docs/: benchmarking.rst  block_wide.rst  developer_overview.rst  device_wide.rst  gen_docs.bash  index.rst  modules.rst  repo.toml  test_overview.rst  tuning.rst  warp_wide.rst
cub/examples/: CMakeLists.txt
cub/releases/: changelog.html
cub/test/: CMakeLists.txt  README.md  bfloat16.h  catch2_device_merge_sort_common.cuh  catch2_large_array_sort_helper.cuh  catch2_large_problem_helper.cuh  catch2_main.cuh  catch2_radix_sort_helper.cuh  catch2_runner.cpp  catch2_runner_helper.cu  catch2_runner_helper.h  catch2_runner_helper.inl  catch2_segmented_sort_helper.cuh  catch2_sort_helper.cuh  catch2_test_agent_segmented_scan.cu  catch2_test_agent_thread_segmented_scan.cu  catch2_test_agent_warp_segmented_scan.cu  catch2_test_arch_dispatch.cu  catch2_test_async_buffer.cu  catch2_test_block_adjacent_difference.cu  catch2_test_block_exchange.cu  catch2_test_block_histogram.cu  catch2_test_block_load.cu  catch2_test_block_load_to_shared.cu  catch2_test_block_merge_sort.cu  catch2_test_block_prefetch.cu  catch2_test_block_radix_sort.cu  catch2_test_block_radix_sort.cuh  catch2_test_block_radix_sort_custom.cu  catch2_test_block_radix_sort_keys.cu  catch2_test_block_radix_sort_pairs.cu  catch2_test_block_reduce.cu  catch2_test_block_reduce_broadcast.cu  catch2_test_block_row_reduce.cu  catch2_test_block_run_length_decode.cu  catch2_test_block_scan.cu  catch2_test_block_scan_api.cu  catch2_test_block_scan_partial.cu  catch2_test_block_scan_partial_containers.cu  catch2_test_block_scan_partial_helper.cuh  (+311 more)
cuda_next/: CMakeLists.txt  LICENSE.TXT  README.md
cuda_next/cmake/: CudaNextAddSubdir.cmake  CudaNextBuildCompilerTargets.cmake  CudaNextBuildTargetList.cmake  CudaNextCudaConfig.cmake  CudaNextHeaderTesting.cmake  CudaNextInstallRules.cmake  header_test.in.cu
cudax/: CMakeLists.txt  LICENSE.TXT  README.md  container.html  graph.html  index.html  memory_resource.html  stf.html
cudax/cmake/: CPM.cmake  (+10 more)
examples/: CMakeLists.txt  README.md  nv_target.cu
georgii_poc_2479/: CMakeLists.txt  Notes  kernel.cpp  main.py
libcudacxx/: .clang-format  .gitignore  CMakeLists.txt  LICENSE.TXT  extended_api.html  index.html  ptx_api.html  releases.html  setup.html  standard_api.html
nvbench_helper/: CMakeLists.txt
nvrtcc/: CMakeLists.txt  README.md
samples/: CMakeLists.txt  run_tests.py
thrust/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  api.html  developer_cmake_options.html  generate_mk.py  index.html  release_process.html  releases.html
(+43903 files in other folders)
